# QtWebServerChat

./: .gitignore
Docker/: README.md  docker-compose.dev.yml  docker-compose.yml
Docker/mysql/init/: 01-create-tables.sql
Qtclient/: CMakeLists.txt  main.cpp  resource.qrc
Qtclient/backend/: networkmanager.cpp  networkmanager.h
Qtclient/qml/: Signals.qml  main.qml  qmldir
Qtclient/qml/components/: MessageBubble.qml
Qtclient/qml/theme/: Theme.qml
Qtclient/qml/views/: AddFriendWindow.qml  ChatView.qml  ContactListView.qml  ContactProfileView.qml  ConversationListView.qml  LoginPage.qml  MainPage.qml  RegisterPage.qml
Qtclient/utils/: logger.cpp  logger.h  qmllogger.cpp  qmllogger.h
Services/: CMakeLists.txt  test_dependencies.cpp
Services/GateServer/: CMakeLists.txt  connection_manager.cpp  connection_manager.h  http_session.cpp  http_session.h  listener.cpp  listener.h  main.cpp  status_client.cpp  status_client.h  status_client_manager.cpp  status_client_manager.h  websocket_manager.h  websocket_session.cpp  websocket_session.h
Services/StatusServer/: CMakeLists.txt  main.cpp  status_service_impl.cpp  status_service_impl.h
Services/VarifyServer/: CMakeLists.txt  main.cpp
Services/proto/: status.proto
Services/utils/: crypto_utils.cpp  crypto_utils.h  database_manager.cpp  database_manager.h  health_checker.cpp  health_checker.h  load_balancer.cpp  load_balancer.h  logger.cpp  logger.h  redis_manager.cpp  redis_manager.h  service_discovery.h  service_registry.cpp  service_registry.h
mnt/d/QtWebServerChat/Services/StatusServer/: main.cpp
scripts/: start-dev.sh  stop-dev.sh
